; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pcmcia/pdaudiocf/extr_pdaudiocf_pcm.c_pdacf_pcm_capture_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pcmcia/pdaudiocf/extr_pdaudiocf_pcm.c_pdacf_pcm_capture_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { i32 }
%struct.snd_pdacf = type { i32* }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @pdacf_pcm_capture_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pdacf_pcm_capture_close(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_pcm_substream*, align 8
  %4 = alloca %struct.snd_pdacf*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %3, align 8
  %5 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %3, align 8
  %6 = call %struct.snd_pdacf* @snd_pcm_substream_chip(%struct.snd_pcm_substream* %5)
  store %struct.snd_pdacf* %6, %struct.snd_pdacf** %4, align 8
  %7 = load %struct.snd_pdacf*, %struct.snd_pdacf** %4, align 8
  %8 = icmp ne %struct.snd_pdacf* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @EINVAL, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %2, align 4
  br label %17

12:                                               ; preds = %1
  %13 = load %struct.snd_pdacf*, %struct.snd_pdacf** %4, align 8
  %14 = call i32 @pdacf_reinit(%struct.snd_pdacf* %13, i32 0)
  %15 = load %struct.snd_pdacf*, %struct.snd_pdacf** %4, align 8
  %16 = getelementptr inbounds %struct.snd_pdacf, %struct.snd_pdacf* %15, i32 0, i32 0
  store i32* null, i32** %16, align 8
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %12, %9
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local %struct.snd_pdacf* @snd_pcm_substream_chip(%struct.snd_pcm_substream*) #1

declare dso_local i32 @pdacf_reinit(%struct.snd_pdacf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
